- Change Point checker method -Add logs -Correct configs -Add error handling